--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'org.jsoup:jsoup:1.17.2'
 
     implementation libs.appcompat
     implementation libs.material
